@@ -971,12 +971,6 @@ parameter_list|,
 name|SegmentInfo
 name|si
 parameter_list|,
-name|Collection
-argument_list|<
-name|String
-argument_list|>
-name|files
-parameter_list|,
 name|IOContext
 name|context
 parameter_list|)
@@ -1002,7 +996,10 @@ decl_stmt|;
 name|int
 name|numFiles
 init|=
+name|si
+operator|.
 name|files
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -1011,7 +1008,10 @@ name|String
 name|names
 index|[]
 init|=
+name|si
+operator|.
 name|files
+argument_list|()
 operator|.
 name|toArray
 argument_list|(
