@@ -302,6 +302,16 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|emptySet
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -313,14 +323,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-expr|<
-name|String
-operator|>
-name|emptyList
-argument_list|()
 argument_list|,
 name|IOContext
 operator|.
@@ -461,6 +463,18 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+name|testfile
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -472,13 +486,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-name|singleton
-argument_list|(
-name|testfile
-argument_list|)
 argument_list|,
 name|IOContext
 operator|.
@@ -650,6 +657,18 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|files
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -661,13 +680,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Arrays
-operator|.
-name|asList
-argument_list|(
-name|files
-argument_list|)
 argument_list|,
 name|IOContext
 operator|.
@@ -835,6 +847,18 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+name|testfile
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -846,13 +870,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-name|singleton
-argument_list|(
-name|testfile
-argument_list|)
 argument_list|,
 name|IOContext
 operator|.
@@ -1014,6 +1031,18 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+name|testfile
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -1025,13 +1054,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-name|singleton
-argument_list|(
-name|testfile
-argument_list|)
 argument_list|,
 name|myContext
 argument_list|)
@@ -1163,6 +1185,18 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+name|testfile
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -1174,13 +1208,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-name|singleton
-argument_list|(
-name|testfile
-argument_list|)
 argument_list|,
 name|context
 argument_list|)
@@ -1497,6 +1524,16 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|emptyList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -1508,14 +1545,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-expr|<
-name|String
-operator|>
-name|emptyList
-argument_list|()
 argument_list|,
 name|IOContext
 operator|.
@@ -1641,6 +1670,16 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|emptyList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -1652,14 +1691,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-expr|<
-name|String
-operator|>
-name|emptyList
-argument_list|()
 argument_list|,
 name|IOContext
 operator|.
@@ -1781,6 +1812,16 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|emptyList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -1792,14 +1833,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-expr|<
-name|String
-operator|>
-name|emptyList
-argument_list|()
 argument_list|,
 name|IOContext
 operator|.
@@ -1923,6 +1956,16 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|emptyList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -1934,14 +1977,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-expr|<
-name|String
-operator|>
-name|emptyList
-argument_list|()
 argument_list|,
 name|IOContext
 operator|.
@@ -2068,6 +2103,16 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|emptyList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -2079,14 +2124,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Collections
-operator|.
-expr|<
-name|String
-operator|>
-name|emptyList
-argument_list|()
 argument_list|,
 name|IOContext
 operator|.
@@ -2334,6 +2371,18 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|files
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -2345,13 +2394,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Arrays
-operator|.
-name|asList
-argument_list|(
-name|files
-argument_list|)
 argument_list|,
 name|IOContext
 operator|.
@@ -2583,6 +2625,21 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -2594,16 +2651,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|Arrays
-operator|.
-name|asList
-argument_list|(
-name|dir
-operator|.
-name|listAll
-argument_list|()
-argument_list|)
 argument_list|,
 name|IOContext
 operator|.
@@ -4754,6 +4801,13 @@ argument_list|)
 decl_stmt|;
 name|si
 operator|.
+name|setFiles
+argument_list|(
+name|files
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
 name|getCodec
 argument_list|()
 operator|.
@@ -4765,8 +4819,6 @@ argument_list|(
 name|dir
 argument_list|,
 name|si
-argument_list|,
-name|files
 argument_list|,
 name|IOContext
 operator|.
